fix: improve cx-tab visible focus (#8415)
Closes #8334

--- a/feature-libs/my-account/organization/src/styles/_list.scss
+++ b/feature-libs/my-account/organization/src/styles/_list.scss
@@ -78,7 +78,11 @@
   cx-table {
     td {
       padding: 0;
+      overflow: visible;
+
       a {
+        @include alt-visible-focus();
+
         justify-content: flex-start;
         padding: var(--cx-spatial-md);
 
