--- a/feature-libs/my-account/organization/src/styles/_section.scss
+++ b/feature-libs/my-account/organization/src/styles/_section.scss
@@ -99,6 +99,7 @@
       color: var(--cx-color-primary);
       line-height: 0.8rem;
       text-transform: none;
+      padding-left: 1rem;
     }
   }
   .instructions {
